FEAT: Define "PFS >= 24" variable as boolean.
FIX: Ensure same order of drawing on "StackedHistogram.plot" method.

--- a/melanoma_phd/config/database_config.yaml
+++ b/melanoma_phd/config/database_config.yaml
@@ -637,11 +637,10 @@ sections:
         - PFS 24:
             id: "PFS 24"
             name: "PFS >= 24"
-            type: categorical
+            type: boolean
             categories:
               0: "< 24"
               1: ">= 24"
-              2: "no evaluable"
 
         - ldh_al_dx:
             id: "LDH AL DX (SIMPLIF)"
