--- a/melanoma_phd/config/database_config.yaml
+++ b/melanoma_phd/config/database_config.yaml
@@ -1634,7 +1634,6 @@ sections:
                 _iteration_selectable: true
                 _iteration_reference_variable_id: "TIEMPO IT{N}"
                 _iteration_type: IterationScalarVariable
-
             - ctDNA evol:
                 id: "ctDNA evol"
                 name: "ctDNA evol"
@@ -1646,7 +1645,6 @@ sections:
                     4: "disminución sin negativización"
                     5: "disminución hasta negativización"
                     6: "disminución con posterior aumento"
-
             - ctDNA evol simplif: 
                 id: "ctDNA evol simplif"
                 name: "ctDNA evol simplif"
@@ -1654,11 +1652,78 @@ sections:
                 categories:
                     0: 1+3+6
                     1: 2+4+5
-
             - ctDNA decreasing time:
                 id: "ctDNA decreasing time"
                 name: "ctDNA decreasing time"
                 type: scalar
+            - ctDNABaseline75todos natera:
+                id: "ctDNABaseline75todos natera"
+                name: "ctDNABaseline75todos natera"
+                type: boolean
+                categories:
+                    0: below percentile 75
+                    1: equal or above
+            - ctDNABaseline75primeraL:
+                id: "ctDNABaseline75primeraL"
+                name: "ctDNABaseline75primeraL"
+                type: boolean
+                categories:
+                    0: below percentile 75
+                    1: equal or above
+            - ctDNABaseline75antiPD1previo:
+                id: "ctDNABaseline75antiPD1previo"
+                name: "ctDNABaseline75antiPD1previo"
+                type: boolean
+                categories:
+                    0: below percentile 75
+                    1: equal or above
+            - ctDNABaseline75BRAF/MEKprevio:
+                id: "ctDNABaseline75BRAF/MEKprevio"
+                name: "ctDNABaseline75BRAF/MEKprevio"
+                type: boolean
+                categories:
+                    0: below percentile 75
+                    1: equal or above
+            - ctDNABaselineto3m:
+                id: "ctDNABaselineto3m"
+                name: "ctDNABaselineto3m"
+                type: categorical
+                categories:
+                    0: decrease
+                    1: increase
+                    2: always negative
+            - ctDNABaselineto6m:
+                id: "ctDNABaselineto6m"
+                name: "ctDNABaselineto6m"
+                type: categorical
+                categories:
+                    0: decrease
+                    1: increase
+                    2: always negative
+            - ctDNA3to6m:
+                id: "ctDNA3to6m"
+                name: "ctDNA3to6m"
+                type: categorical
+                categories:
+                    0: decrease
+                    1: increase
+                    2: always negative
+            - ctDNA6tobeyond:
+                id: "ctDNA6tobeyond"
+                name: "ctDNA6tobeyond"
+                type: categorical
+                categories:
+                    0: decrease
+                    1: increase
+                    2: always negative
+            - ctDNA3to6m:
+                id: "ctDNA3to6m"
+                name: "ctDNA3to6m"
+                type: categorical
+                categories:
+                    0: decrease
+                    1: increase
+                    2: always negative
 
     - radiological_tests_database:
         name: "PRUEBAS RADIOLÓGICAS"
